<resources>
    <string name="app_name">Contacts</string>
    <string name="login">Login</string>
    <string name="Register">Register</string>
    <string name="leader">লিডার বোর্ড</string>
    <string name="name">শহিদুল ইসলাম শিশির</string>
    <string name="pointtotal">মোট পয়েন্ট</string>
    <string name="point">পয়েন্ট</string>
    <string name="points">২০০০</string>
    <string name="place">অবস্থান</string>
    <string name="fifth">৫ম</string>
    <string name="first">১ম</string>
    <string name="second">২য়</string>
    <string name="third">৩য়</string>
    <string name="score_day">স্কোরিং দিন</string>
    <string name="fifth_day">৫ম দিন</string>
    <string name="day">দিন</string>
    <string name="score_time">স্কোরিং সময়</string>
    <string name="time10">১০:৪৫:৩০</string>
    <string name="time">সময়</string>
    <string name="name2">কবির হোসেন</string>
    <string name="name3">সুলতানা জামান</string>
    <string name="name4">নাম</string>
    <string name="time2">১০:৪৩</string>
    <string name="points2">১২০০০</string>
    <string name="daytime">৫ম দিন/১০:৩২</string>
    <string name="four">8</string>
    <string name="five">৫</string>
    <string name="six">৬</string>
    <string name="day2">৫ম দিন</string>
</resources>