<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/back">

    <ImageView
        android:id="@+id/topimage"
        android:layout_width="400dp"
        android:layout_height="10dp"
        android:background="@drawable/topimage"
        tools:ignore="MissingConstraints"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/white"
        android:layout_width="367dp"
        android:layout_height="203dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="11dp"
        android:background="@drawable/rectangle_5"
        android:elevation="32dp"
        android:paddingBottom="-20dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topimage">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/leader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cup"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/leader"
                android:textColor="#2B1875"
                android:textSize="30dp" />
            <ImageView
                android:id="@+id/cup"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/cup"
                app:layout_constraintStart_toEndOf="@+id/leader"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <View
                android:id="@+id/line1"
                app:layout_constraintStart_toEndOf="@+id/cup"
                app:layout_constraintTop_toBottomOf="@+id/cup"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <ImageView
                android:id="@+id/profileback"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/profileback"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/line1" />
            <ImageView
                android:id="@+id/profile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="12.5dp"
                android:src="@drawable/profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/profilename"
                app:layout_constraintTop_toTopOf="@id/line1" />
            <TextView
                android:id="@+id/profilename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toEndOf="@id/profile"
                app:layout_constraintEnd_toStartOf="@+id/cup"
                app:layout_constraintTop_toTopOf="@id/line1"
                android:text="@string/name"
                android:textColor="#4C5465"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/line1"
                android:text="@string/point"
                android:textColor="#262D3E"
                android:textSize="15dp" />
            <TextView
                android:id="@+id/points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/point"
                android:text="@string/points"
                android:textColor="#D1409F"
                android:textSize="30dp"
                android:textStyle="bold"/>
            <View
                android:id="@+id/line2"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileback"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/line2"
                android:text="@string/place"
                android:textColor="#262D3E"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/fifth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/place"
                android:text="@string/fifth"
                android:textColor="#D1409F"
                android:textSize="25dp"/>
            <TextView
                android:id="@+id/score_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/score_time"
                app:layout_constraintTop_toTopOf="@id/line2"
                android:text="@string/score_day"
                android:textColor="#262D3E"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/fifth_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/score_time"
                app:layout_constraintTop_toBottomOf="@id/score_day"
                android:text="@string/fifth_day"
                android:textColor="#D1409F"
                android:textSize="25dp"/>
            <TextView
            android:id="@+id/score_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/line2"
            android:text="@string/score_time"
            android:textColor="#262D3E"
            android:textSize="15dp"/>
            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/score_day"
                android:text="@string/time"
                android:textColor="#D1409F"
                android:textSize="25dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/violate"
        android:layout_width="match_parent"
        android:layout_height="495dp"
        app:layout_constraintTop_toBottomOf="@+id/white"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:background="@drawable/rectangle_30">
    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>